2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/fit-to-width/Makefile.am:
	* plugins/fit-to-width/eog-fit-to-width-plugin.c:
	* plugins/fit-to-width/eog-fit-to-width-plugin.h:
	* plugins/fit-to-width/fit-to-width.eog-plugin.desktop.in:
	Add fit-to-width plugin which tries to make the image width fit the
	window. Fixes bug #438642 (Javier Sánchez).

2009-04-12  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/slideshowshuffle/Makefile.am:
	* plugins/slideshowshuffle/slideshowshuffle.eog-plugin.desktop.in:
	* plugins/slideshowshuffle/slideshowshuffle.py:
	Add plugin to randomize image order during slideshows.
	Fixes bug #526135 (Johannes Marbach).

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* Makefile.am: Forgot to remove gnome-doc-utils from the Makefile.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: There is no need for gnome-doc-utils.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Add configure bits missing from last commit.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* Makefile.am:
	* autogen.sh:
	Require at least intltool-0.40.0.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Fix Bugzilla URI and remove unneeded dependencies
	on libglade and GnomeVFS.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/pythonconsole/*:
	Add pythonconsole plugin based on the gedit plugin of the same name.
	Fixes bug #462338 (Diego Escalante Urrelo, Francisco Rojas).

2008-10-17  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/champlain/eog-champlain-plugin.c:
	Update plugin to work with latest libchamplain (Pierre-Luc Beaudoin).

2008-10-12  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, plugins/champlain/*: new geo tagging plugin based on
	libchamplain. Patch from Pierre-Luc Beaudoin <pierre-luc@pierlux.com>.

2008-04-08  Lucas Rocha  <lucasr@gnome.org>
